[gd_scene load_steps=49 format=3 uid="uid://cln0p0ujudono"]

[ext_resource type="Script" path="res://Scripts/Actors/Player/player.gd" id="1_fk0us"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/finite_state_machine.gd" id="2_nyi3l"]
[ext_resource type="PackedScene" uid="uid://b7ojl8v2dr6ic" path="res://Entities/Actors/Components/HealthComponent.tscn" id="2_r2lnc"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/Rose/rose_action_instancer.gd" id="2_rv5x2"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/crouch_state.gd" id="3_7ptux"]
[ext_resource type="PackedScene" uid="uid://cbacgr06p2n8d" path="res://Entities/Actors/Components/HitBoxComponentComponent.tscn" id="3_nu4hu"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/move_on_ground_state.gd" id="3_wsm4e"]
[ext_resource type="Shader" path="res://Resources/Shaders/MultCelShader.gdshader" id="4_ahpf3"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/move_in_air_state.gd" id="4_fqp0q"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/ledge_grab_state.gd" id="5_khmi4"]
[ext_resource type="Texture2D" uid="uid://di6yfqroio682" path="res://Assets/Sprites/Actors/Rose/Movement/Crouch_spec.png" id="6_kpanm"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/hit_state.gd" id="6_l568u"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/action_state.gd" id="7_f8aj2"]
[ext_resource type="AnimationLibrary" uid="uid://bt2jl0ipha4it" path="res://Resources/Entities/Actors/Players/Rose/RoseAnimations.res" id="8_r86g7"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/action_controller.gd" id="8_stjrx"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/rest_state.gd" id="10_0y204"]
[ext_resource type="Texture2D" uid="uid://dxy8swrhmfe6o" path="res://Assets/Sprites/Actors/Rose/Movement/Dodge.png" id="11"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/wind.gd" id="13"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/Rose/rose_powerups.gd" id="20_7yhyd"]
[ext_resource type="AudioStream" uid="uid://cn7p24ax43am8" path="res://Assets/sfx/Rose/footsteps/dirt_small_01.wav" id="24_eudmd"]
[ext_resource type="Texture2D" uid="uid://dywlvnpiyk1ux" path="res://Assets/Sprites/Actors/Rose/Movement/Dodge_n.png" id="25"]
[ext_resource type="AudioStream" uid="uid://dmipgverichil" path="res://Assets/sfx/Rose/footsteps/dirt_small_02.wav" id="25_alfby"]
[ext_resource type="AudioStream" uid="uid://dx6jjv8t3i16c" path="res://Assets/sfx/Rose/footsteps/dirt_small_03.wav" id="26_kb0qx"]
[ext_resource type="AudioStream" uid="uid://dlhyiygitnctd" path="res://Assets/sfx/Rose/footsteps/dirt_small_04.wav" id="27_7d7v0"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/targetting.gd" id="27_rf1x6"]
[ext_resource type="AudioStream" uid="uid://tucbwclrj8vh" path="res://Assets/sfx/Rose/footsteps/grass_01.wav" id="28_l86wd"]
[ext_resource type="Texture2D" uid="uid://c8rca7bu5dyj0" path="res://Assets/Sprites/Actors/Rose/cape_shadow.png" id="28_ulm3k"]
[ext_resource type="AudioStream" uid="uid://dd03krstvwosv" path="res://Assets/sfx/Rose/footsteps/grass_02.wav" id="29_4e2rh"]
[ext_resource type="AudioStream" uid="uid://c0i5156p105k6" path="res://Assets/sfx/Rose/footsteps/grass_03.wav" id="30_8kw3x"]
[ext_resource type="AudioStream" uid="uid://bf7yjvwtodx22" path="res://Assets/sfx/Rose/footsteps/grass_04.wav" id="31_qkrlm"]
[ext_resource type="Script" path="res://Scripts/Actors/audio_handler.gd" id="59_i7kba"]
[ext_resource type="AudioStream" uid="uid://j67f5a4y0kt2" path="res://Assets/sfx/slide/dirt_small_01.wav" id="67_0lnn5"]
[ext_resource type="AudioStream" uid="uid://5dkwcib3rpe7" path="res://Assets/sfx/slide/dirt_small_02.wav" id="68_bsyx1"]
[ext_resource type="AudioStream" uid="uid://dymsuoh43v4xl" path="res://Assets/sfx/slide/dirt_small_03.wav" id="69_f7myh"]
[ext_resource type="AudioStream" uid="uid://34xxjcy1hxrk" path="res://Assets/sfx/slide/dirt_small_04.wav" id="70_hi1u4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p8e1"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hehew"]
size = Vector2(20, 16)

[sub_resource type="CanvasTexture" id="CanvasTexture_lje0h"]
diffuse_texture = ExtResource("11")
normal_texture = ExtResource("25")
specular_texture = ExtResource("6_kpanm")

[sub_resource type="Animation" id="Animation_vqjy8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite2D:texture:diffuse_texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite2D:texture:normal_texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("25")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Utilities/CapeTarget/Position2D5:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Utilities/CapeTarget/Position2D4:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Utilities/CapeTarget/Marker2D:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Utilities/CapeTarget/Marker2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-9, 5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Utilities/CapeTarget/Position2D2:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Utilities/CapeTarget/Position2D2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 4)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Utilities/CapeTarget/Position2D3:z_index")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../Utilities/CapeTarget/Position2D3:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 3)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../Utilities/CapeTarget/Position2D4:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 2)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../Utilities/CapeTarget/Position2D5:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../Sprites/Sprite2D:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("CanvasTexture_lje0h")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_182hr"]
_data = {
"RESET": SubResource("Animation_vqjy8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inapb"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(20, 38)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2qgdc"]
shader = ExtResource("4_ahpf3")
shader_parameter/cameraPosition = Vector3(0, 0, 0)
shader_parameter/lightColorFac = 0.1
shader_parameter/lightAdd = -0.2
shader_parameter/shadowSubtract = 0.5
shader_parameter/pointUnlitAdjust = Color(0, 0, 0, 1)
shader_parameter/unlitColorMix = Color(0.12549, 0.054902, 0.0627451, 1)
shader_parameter/unlitColorBase = Color(0, 0, 0, 1)
shader_parameter/unlitColorControl = 0.5
shader_parameter/theta = 0.0
shader_parameter/darkArea = Color(1, 0, 0, 1)
shader_parameter/segmentation = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3m3ny"]
size = Vector2(480, 270)

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(20, 4)

[sub_resource type="RectangleShape2D" id="19"]
size = Vector2(20, 4)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_eqg82"]
cull_mode = 2
polygon = PackedVector2Array(-5, -19, 4, -19, 5, 5, 2, 19, -2, 19, -6, 5)

[node name="RoseBody" type="CharacterBody2D" node_paths=PackedStringArray("state_machine") groups=["Persist", "Player"]]
position = Vector2(-1, 3)
collision_layer = 4
floor_snap_length = 3.0
script = ExtResource("1_fk0us")
base_soft_speed_cap = 250.0
base_jump_spd = 450.0
base_grav = 20.0
grav_max = 350.0
state_machine = NodePath("MoveStates")

[node name="HealthComponent" parent="." instance=ExtResource("2_r2lnc")]
max_health = 100

[node name="HitBoxComponent" parent="." instance=ExtResource("3_nu4hu")]

[node name="HitBox" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("RectangleShape2D_5p8e1")
disabled = true

[node name="CrouchHitBoxComponent" parent="." instance=ExtResource("3_nu4hu")]

[node name="HitBox" type="CollisionShape2D" parent="CrouchHitBoxComponent"]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_hehew")

[node name="AnimatorComponent" type="AnimationPlayer" parent="."]
root_node = NodePath("../Animators")
libraries = {
"": SubResource("AnimationLibrary_182hr"),
"RoseAnimations": ExtResource("8_r86g7")
}

[node name="StatusEffects" type="Node2D" parent="."]

[node name="CrouchBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_inapb")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("1")
disabled = true

[node name="MoveStates" type="Node2D" parent="."]
script = ExtResource("2_nyi3l")
host_path = NodePath("..")
move_states = {
"action": NodePath("Action"),
"crouch": NodePath("Crouch"),
"hit": NodePath("Hit"),
"ledge_grab": NodePath("LedgeGrab"),
"move_in_air": NodePath("MoveInAir"),
"move_on_ground": NodePath("MoveOnGround")
}

[node name="MoveOnGround" type="Node2D" parent="MoveStates"]
script = ExtResource("3_wsm4e")
open_cast_l_path = NodePath("../../Utilities/OpenCrouchCastL")
open_cast_r_path = NodePath("../../Utilities/OpenCrouchCastR")

[node name="LookTimer" type="Timer" parent="MoveStates/MoveOnGround"]
wait_time = 0.25
one_shot = true

[node name="MoveInAir" type="Node2D" parent="MoveStates" node_paths=PackedStringArray("ledge_cast_l", "ledge_cast_r", "wall_cast_l", "wall_cast_r", "open_ledge_cast_l", "open_ledge_cast_r")]
script = ExtResource("4_fqp0q")
jumped = true
ledge_cast_l = NodePath("../../Utilities/LedgeCastL")
ledge_cast_r = NodePath("../../Utilities/LedgeCastR")
wall_cast_l = NodePath("../../Utilities/WallCastL")
wall_cast_r = NodePath("../../Utilities/WallCastR")
open_ledge_cast_l = NodePath("../../Utilities/OpenLedgeCastL")
open_ledge_cast_r = NodePath("../../Utilities/OpenLedgeCastR")

[node name="LedgeDisableTimer" type="Timer" parent="MoveStates/MoveInAir"]
one_shot = true

[node name="LedgeGrab" type="Node2D" parent="MoveStates"]
visible = false
script = ExtResource("5_khmi4")

[node name="ClimbBox" type="Area2D" parent="MoveStates/LedgeGrab"]
position = Vector2(14, -40)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveStates/LedgeGrab/ClimbBox"]
shape = SubResource("2")

[node name="Hit" type="Node2D" parent="MoveStates"]
script = ExtResource("6_l568u")
fall_flag = true

[node name="Action" type="Node2D" parent="MoveStates"]
script = ExtResource("7_f8aj2")
use_default_movement = false

[node name="ActionController" type="Node2D" parent="MoveStates/Action"]
script = ExtResource("8_stjrx")
action_can_interrupt = true

[node name="ActionInstancer" type="Node2D" parent="MoveStates/Action/ActionController"]
script = ExtResource("2_rv5x2")

[node name="ComboTimer" type="Timer" parent="MoveStates/Action"]
wait_time = 0.5
one_shot = true

[node name="Rest" type="Node2D" parent="MoveStates"]
script = ExtResource("10_0y204")

[node name="Crouch" type="Node2D" parent="MoveStates"]
script = ExtResource("3_7ptux")
open_cast_l_path = NodePath("../../Utilities/OpenCrouchCastL")
open_cast_r_path = NodePath("../../Utilities/OpenCrouchCastR")

[node name="LookTimer" type="Timer" parent="MoveStates/Crouch"]
wait_time = 0.25
one_shot = true

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sprites"]
material = SubResource("ShaderMaterial_2qgdc")
texture = SubResource("CanvasTexture_lje0h")
offset = Vector2(5, 0)

[node name="Animators" type="Node2D" parent="."]

[node name="ShaderAnimator" type="AnimationPlayer" parent="Animators"]

[node name="Utilities" type="Node2D" parent="."]

[node name="DetectOtherArea" type="Area2D" parent="Utilities"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Utilities/DetectOtherArea"]
visible = false
shape = SubResource("RectangleShape2D_3m3ny")

[node name="AttackCollision" type="Area2D" parent="Utilities"]

[node name="LedgeBoxL" type="Area2D" parent="Utilities"]
position = Vector2(-10, -27)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Utilities/LedgeBoxL"]
shape = SubResource("18")

[node name="LedgeBoxR" type="Area2D" parent="Utilities"]
position = Vector2(10, -27)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Utilities/LedgeBoxR"]
shape = SubResource("19")

[node name="LedgeCastL" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -20)
target_position = Vector2(-20, 0)

[node name="OpenLedgeCastL" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -36)
target_position = Vector2(-30, 0)
hit_from_inside = true

[node name="LedgeCastR" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -20)
target_position = Vector2(20, 0)

[node name="OpenLedgeCastR" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -36)
target_position = Vector2(30, 0)
hit_from_inside = true

[node name="WallCastR" type="RayCast2D" parent="Utilities"]
position = Vector2(1, -3)
target_position = Vector2(30, 0)
hit_from_inside = true

[node name="WallCastL" type="RayCast2D" parent="Utilities"]
position = Vector2(1, -3)
target_position = Vector2(-30, 0)
hit_from_inside = true

[node name="OpenCrouchCastR" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -20)
target_position = Vector2(8, 0)
hit_from_inside = true

[node name="OpenCrouchCastL" type="RayCast2D" parent="Utilities"]
position = Vector2(0, -20)
target_position = Vector2(-8, 0)
hit_from_inside = true

[node name="CapeTarget" type="Node2D" parent="Utilities"]
position = Vector2(0, -8)

[node name="Marker2D" type="Marker2D" parent="Utilities/CapeTarget"]
z_index = 1
position = Vector2(-9, 5)

[node name="Position2D2" type="Marker2D" parent="Utilities/CapeTarget"]
z_index = 2
position = Vector2(-8, 4)

[node name="Position2D3" type="Marker2D" parent="Utilities/CapeTarget"]
z_index = 3
position = Vector2(-6, 3)

[node name="Position2D4" type="Marker2D" parent="Utilities/CapeTarget"]
z_index = 4
position = Vector2(-4, 2)

[node name="Position2D5" type="Marker2D" parent="Utilities/CapeTarget"]
z_index = 5
position = Vector2(-2, 1)

[node name="CapeInfluencers" type="Node2D" parent="Utilities"]

[node name="Marker2D" type="Marker2D" parent="Utilities/CapeInfluencers"]
visible = false
position = Vector2(-25, 0)

[node name="Sprite2d2" type="Sprite2D" parent="Utilities/CapeInfluencers/Marker2D"]
modulate = Color(1, 0.886275, 0, 1)
texture = ExtResource("28_ulm3k")

[node name="WindNode" type="Marker2D" parent="Utilities"]
position = Vector2(-64, -40)
rotation = -3.14159
script = ExtResource("13")
time_mod = 3.0

[node name="ActionSpawn" type="Node2D" parent="Utilities"]
position = Vector2(88.2941, 0)

[node name="TargetReticle" type="Node2D" parent="Utilities"]
visible = false
script = ExtResource("27_rf1x6")

[node name="Sprite2d" type="Sprite2D" parent="Utilities/TargetReticle"]
modulate = Color(0, 0.0745098, 1, 1)
position = Vector2(64, 0)
texture = ExtResource("28_ulm3k")

[node name="Powerups" type="Node2D" parent="Utilities"]
script = ExtResource("20_7yhyd")

[node name="SoundNode" type="Node2D" parent="Utilities"]
script = ExtResource("59_i7kba")
footsteps_dirt = Array[AudioStream]([ExtResource("24_eudmd"), ExtResource("25_alfby"), ExtResource("26_kb0qx"), ExtResource("27_7d7v0")])
footsteps_grass = Array[AudioStream]([ExtResource("28_l86wd"), ExtResource("29_4e2rh"), ExtResource("30_8kw3x"), ExtResource("31_qkrlm")])
slide_dirt = Array[AudioStream]([ExtResource("67_0lnn5"), ExtResource("68_bsyx1"), ExtResource("69_f7myh"), ExtResource("70_hi1u4")])

[node name="LightOccluder2D" type="LightOccluder2D" parent="Utilities"]
z_index = -4096
occluder = SubResource("OccluderPolygon2D_eqg82")
occluder_light_mask = 5

[node name="AudioListener2D" type="AudioListener2D" parent="."]
position = Vector2(0, 19)
current = true

[connection signal="animation_changed" from="." to="." method="_on_rose_animation_changed"]
[connection signal="footstep" from="." to="Utilities/SoundNode" method="_on_rose_body_footstep"]
[connection signal="silence" from="." to="Utilities/SoundNode" method="_on_rose_body_silence"]
[connection signal="animation_finished" from="AnimatorComponent" to="." method="_on_animator_component_animation_finished"]
[connection signal="timeout" from="MoveStates/MoveOnGround/LookTimer" to="MoveStates/MoveOnGround" method="_on_look_timer_timeout"]
[connection signal="timeout" from="MoveStates/MoveInAir/LedgeDisableTimer" to="MoveStates/MoveInAir" method="_on_LedgeDisableTimer_timeout" flags=18]
[connection signal="timeout" from="MoveStates/Crouch/LookTimer" to="MoveStates/Crouch" method="_on_look_timer_timeout"]
